# SyntaxSphere

./: .gitmodules  README.md  update_remote.ps1  update_remote.sh
A++/00000-Introduction/: Syntax.A++  syntax.Jai  syntax.cpp  syntax.md  syntax.txt
A++/00001-GeneralSyntax/: main.axx
Assembly/: hello.asm
C#/00000-helloworld/: main.cs
C#/ConsoleApp1/: ConsoleApp1.sln
C#/ConsoleApp2/: ConsoleApp2.sln
C++/: CPP teaching list.md  main.cpp
C++/00000-Playground/: compile_flags.txt  main.cpp
C++/00004-ClassStructFunctionQulifiers/: CMakeLists.txt  compile_flags.txt  include.cpp  include.hpp  main.cpp
C++/00004-ClassStructFunctionQulifiers/Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MAIN.vcxproj  MAIN.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.sln
C++/00004-ClassStructFunctionQulifiers/Debug/.cmake/api/v1/reply/: codemodel-v2-6af916a6558e645c7809.json  index-2023-07-23T17-27-24-0323.json  target-ALL_BUILD-MinSizeRel-9f1257faaf407b32479e.json  target-MAIN-Debug-fce829cad53b795e6f71.json  target-MAIN-MinSizeRel-6af5a1a127b1245b7d13.json  target-MAIN-RelWithDebInfo-a8fb159efa7b4503bf20.json  target-MAIN-Release-532370b963c0ef671701.json  target-ZERO_CHECK-Release-a66ecb9be6703c8160f6.json
C++/00004-ClassStructFunctionQulifiers/Debug/MAIN.dir/Debug/: MAIN.exe.recipe  MAIN.ilk
C++/00004-ClassStructFunctionQulifiers/Debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
C++/00004-ClassStructFunctionQulifiers/Debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Coq/: code.v
Python/: python.py
(+128 files in other folders)
